--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11684,3 +11684,32 @@ pre .code {
   display: block;
   margin-top: 10px;
 }
+
+/*********image gallary**********************/
+.image-item {
+  width: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.large-image-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(50, 50, 50, 0.7);
+  z-index: 1021;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.large-image {
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.large-image-container.hidden {
+  display: none;
+}
